<resources>
    <string name="app_name">지하철 범죄 알림이</string>

    <string name="wait_message">위치를 가져오는 중입니다.\n잠시만 기다려주세요.</string>

    <string name="settings">Current Settings</string>
    <string name="settings_regions">Regions</string>
    <string name="settings_recoonly">RECO Only</string>
    <string name="settings_discontinouos">Discontinuous Scan</string>
    <string name="settings_backgroundtimeout">Background Ranging Timeout</string>
    <string name="settings_result_true">True</string>
    <string name="settings_result_false">False</string>

    <string name="background_monitoring">Background Monitoring</string>
    <string name="background_ranging">Background Ranging</string>

    <string name="start_monitoring">Start Monitoring</string>
    <string name="start_ranging">Start Ranging</string>

    <string name="temp">xxxxx</string>
    <string name="major_label">Maj: </string>
    <string name="minor_label">Min: </string>
    <string name="tx_label">Tx: </string>
    <string name="rssi_label">RSSI: </string>
    <string name="battery_label">Battery: </string>
    <string name="proximity_label">Proximity: </string>
    <string name="accuracy_label">meters</string>
    <string name="millivolt">mV</string>

    <string name="location_permission_granted">Location permission has been granted. RECO SDK can now work properly.</string>
    <string name="location_permission_not_granted">Location permission for this application is denied. RECO SDK may not work properly.</string>
    <string name="location_permission_rationale">Location permission is needed to monitor or range beacons.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>
